--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+
 .background {
   background-image: url(img/about_me.svg);
   background-repeat: no-repeat;
@@ -19,7 +24,7 @@
 }
 
 h3 {
-  font-family: 'Crete Round';
+  font-family: 'Crete Round', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 72px;
@@ -28,7 +33,7 @@ h3 {
 }
 
 h4 {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -43,7 +48,7 @@ h4 {
 }
 
 p {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -62,7 +67,7 @@ p {
 }
 
 .contact-description {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -70,4 +75,20 @@ p {
   display: flex;
   align-items: center;
   color: #262626;
+}
+
+textarea {
+  height: 112px;
+}
+
+.clearfix-sm {
+  padding: 5px;
+}
+
+.social a {
+  padding: 5px;
+}
+
+.top-border {
+  border-top: 1px solid #dfe1e6;
 }
