--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav {
     width: 100%;
     height: 758px;
     position: relative;
-    background-image: url(../images/herodesktopV.png);
+    background-image: url(../img/sideimage.png);
     background-size: 635px 640px;
     background-position: bottom 100px right 0;
     background-repeat: no-repeat;
